# stakepools

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start_app.py  start_app.sh
src/: main.py
src/application/transport/auth/: jwt.py
src/application/transport/pools/: pools.py
src/application/transport/transactions/: transactions.py
src/application/transport/users/: users.py
src/application/uow/: uow.py
src/application/use_cases/auth/: jwt.py
src/application/use_cases/pools/: pools.py
src/application/use_cases/users/: individuals.py  legal_entities.py  users.py
src/config/: app.py  blockchain.py  database.py  jwt.py  server.py  trongrid.py
src/domain/models/: __init__.py
src/domain/models/pools/: __init__.py  pools.py
src/domain/models/transactions/: __init__.py  transactions.py
src/domain/models/users/: users.py
src/domain/services/users/: users.py
src/infrastructure/blockchain/: transactions_manager.py
src/infrastructure/database/: base.py  healthcheck.py
src/infrastructure/fastapi/: app.py
src/infrastructure/logger/: logger.py
src/infrastructure/repositories/: abstract_repository.py
src/ui/api/: __init__.py  router.py
src/ui/api/auth/: __init__.py  router.py
src/utils/: blockchain.py  metadata.py  passwords.py  sqlalchemy_types.py  utils.py
src/utils/api/: responses.py
src/utils/choices/: otp_type.py
src/utils/datetime/: datetime.py  sql.py
src/utils/exceptions/: healthchecks.py  http_exc.py  otp_exc.py
src/utils/mixins/: common.py  generic_foreign_key_mixin.py
src/utils/validators/: phone.py
(+13 files in other folders)
